--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -12,8 +12,8 @@
 }
 
 .background {
-	position: absolute;
+	position: fixed;
 	inset: 0;
-	background-size: cover;
 	z-index: -1;
+	background-size: cover;
 }
